--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('FDG.jpg');
+    background-image: url('img/FDG.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
